--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -20,3 +20,14 @@
     </div>
 </div>
 {% endmacro %}
+
+{% macro render_admin_local_nav(current_user, active_link) -%}
+<ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
+    <li>{{active_link}}</li>
+    <li {% if active_link==""%}class="active"{% endif %}><a href=""><i class="glyphicon glyphicon-chevron-right"></i>Featured</a></li>
+    <li {% if active_link==""%}class="active"{% endif %}><a href=""><i class="glyphicon glyphicon-chevron-right"></i>Categories</a></li>
+    <li {% if active_link==""%}class="active"{% endif %}><a href=""><i class="glyphicon glyphicon-chevron-right"></i>Administrators</a></li>
+    <li {% if active_link==""%}class="active"{% endif %}><a href=""><i class="glyphicon glyphicon-chevron-right"></i>Users</a></li>
+    <li {% if active_link==""%}class="active"{% endif %}><a href=""><i class="glyphicon glyphicon-chevron-right"></i>Background Jobs</a></li>
+</ul>
+{% endmacro %}
