--- a/templates/applications/_helpers.html
+++ b/templates/applications/_helpers.html
@@ -120,7 +120,7 @@
 {% macro show_app(app, active_cat, current_user, upload_method) %}
 
 <div class="container container-padded">
-    <div class="row project-summary">
+    <div class="row project-summary padding-bottom">
         <div class="col-md-8 col-xs-12">
             <div class="white-rounded inset-shadow-white project-desc">
                 <div class="col-sm-6 col-xs-12 hidden-sm hidden-xs project-polaroid">
@@ -231,7 +231,7 @@ function imgError(image) {
 
 {% macro render_grid_apps(apps, title, upload_method) %}
     <div class="container container-padded">
-        <div class="row text-center">
+        <div class="row text-center padding-bottom-sm">
             <h1>{{title}}</h1>
         </div>
             <div class="col-xs-12">
