--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -29,7 +29,7 @@
                 <p>{{ brand }} is built on top of <a href="http://docs.pybossa.com/"> PyBossa </a>, which is a an open-source framework for the creation of
                 crowd-sourcing projects.</p>
                 
-                <p>Individual applications are primarily written in HTML and Javascript, with some making use of additional components, written in languages such as PHP.</p>
+                <p>Individual applications are primarily written in HTML and Javascript, with some making use of components written in additional languages, such as PHP.</p>
             </div>
             <div class="col-sm-6 col-sm-offset-3 col-xs-12 padding-top-sm">
                 <div class="col-xs-4"><img src="{{url_for('static',filename='img/html-logo.png')}}" class="img-responsive web-badge"></div>
