--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -26,7 +26,7 @@
 </section>
 
  {% if categories_apps['featured'] %}
-<section class="white pattern-white-wall box-shadow-white-bottom">
+<section class="white pattern-white-wall box-shadow-white-bottom padding-bottom">
   <div class="row text-center padding-top">
         <h2>{{ _('Featured Projects') }}</h2>
       </div>
