--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -5,8 +5,9 @@
 
 
 {% block content %}
+<span class="set-main-bg" data-bg="pattern-brushed"></span>
 <div class="container-padded  remove-padding-bottom">
-    <section class="pattern-brushed box-shadow-grey">
+    <section class="grey">
         <div class="container container-main">
             <div class="row">
                 <div class="col-md-12 white-rounded inset-shadow">
