--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -173,7 +173,7 @@ div.white-rounded {
     background-color: #FFFFFF;
     padding: 20px 30px;
     border-radius: 15px;
-    border: 1px solid rgba(255,255,255,0.5);
+    border: 1px solid rgba(223,223,223,0.5);
 }
 
 div.white-rounded-panel {
@@ -1832,7 +1832,7 @@ ul.polaroids .polaroid img {
     -moz-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
     box-shadow:inset 0px 0px 3px 1px rgba(0,0,0,0.2);
-    border: 1px solid rgba(255,255,255,0.5);
+    border: 1px solid rgba(223,223,223,0.5);
 }
 
 .inset-shadow-white {
@@ -1846,14 +1846,14 @@ ul.polaroids .polaroid img {
   -moz-box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
   -webkit-box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
   box-shadow: inset 0 4px 3px -3px rgba(0,0,0,0.2);
-  border-top: 1px solid rgba(255,255,255,0.5);
+  border-top: 1px solid rgba(223,223,223,0.5);
 }
 
 .inset-shadow-bottom {
   -moz-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
   -webkit-box-shadow: inset 0px -3px 5px -3px rgba(0,0,0,0.2);
   box-shadow: inset 0 -3px 5px -3px rgba(0,0,0,0.2);
-  border-bottom: 1px solid rgba(255,255,255,0.5);
+  border-bottom: 1px solid rgba(223,223,223,0.5);
 }
 
 .div .text-shadow {
@@ -1888,7 +1888,7 @@ ul.polaroids .polaroid img {
   -webkit-box-shadow: 2px 4px 4px -4px rgba(0,0,0,.4);
   -moz-box-shadow: 2px 4px 4px -4px rgba(0,0,0,.4);
   z-index: 2;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
+  border-bottom: 1px solid rgba(223,223,223,0.5);
 }
 
 .box-shadow-grey-top {
@@ -1896,7 +1896,7 @@ box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
 -webkit-box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
 -moz-box-shadow: 0px -3px 4px -4px rgba(0,0,0,.4);
 z-index: 2;
-border-top: 1px solid rgba(255,255,255,0.5);
+border-top: 1px solid rgba(223,223,223,0.5);
 }
 
 .box-shadow-grey {
@@ -1904,7 +1904,7 @@ border-top: 1px solid rgba(255,255,255,0.5);
   -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
   -moz-box-shadow: 0px 0px 3px rgba(0,0,0,.2);
   z-index: 2;
-  border: 1px solid rgba(255,255,255,0.5);
+  border: 1px solid rgba(223,223,223,0.5);
 }
 
 .border-radius-sm{
@@ -1953,18 +1953,9 @@ border-top: 1px solid rgba(255,255,255,0.5);
   -moz-border-radius-bottomleft: 10px;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-  background-color: rgb(127,247,127);
-  background-image: -webkit-gradient(
-			  linear,
-			  left bottom,
-			  left top,
-			  color-stop(0, rgb(86,176,109)),
-			  color-stop(1, rgb(127,247,127)));
-  background-image: -moz-linear-gradient(
-			  center bottom,
-			  rgb(86,176,109) 37%,
-			  rgb(127,247,127) 69%
-			 );
+  background-color: rgb(43,194,83);
+  background-image: -webkit-gradient( linear, left bottom, left top, color-stop(0, rgb(43,194,83)), color-stop(1, rgb(84,240,84)) );
+  background-image: -moz-linear-gradient( center bottom, rgb(43,194,83) 37%, rgb(84,240,84) 69% );
   -webkit-box-shadow: inset 0 2px 9px  rgba(255,255,255,0.3),
 			  inset 0 -2px 6px rgba(0,0,0,0.4);
   -moz-box-shadow: inset 0 2px 9px  rgba(255,255,255,0.3),
@@ -1972,6 +1963,34 @@ border-top: 1px solid rgba(255,255,255,0.5);
   box-shadow: inset 0 2px 9px  rgba(255,255,255,0.3),
 			  inset 0 -2px 6px rgba(0,0,0,0.4);
   position: relative;
+  overflow: hidden;
+}
+
+.meter > span:after, .animate > span > span {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-image: -webkit-gradient(linear, 0 0, 100% 100%, color-stop(.25, rgba(255, 255, 255, .2)), color-stop(.25, transparent), color-stop(.5, transparent), color-stop(.5, rgba(255, 255, 255, .2)), color-stop(.75, rgba(255, 255, 255, .2)), color-stop(.75, transparent), to(transparent) );
+  background-image: -moz-linear-gradient( -45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent );
+  z-index: 1;
+  -webkit-background-size: 50px 50px;
+  -moz-background-size: 50px 50px;
+  background-size: 50px 50px;
+  -webkit-border-top-right-radius: 10px;
+  -webkit-border-bottom-right-radius: 10px;
+  -moz-border-radius-topright: 10px;
+  -moz-border-radius-bottomright: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  -webkit-border-top-left-radius: 10px;
+  -webkit-border-bottom-left-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-bottomleft: 10px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
   overflow: hidden;
 }
 
