--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container-padded remove-padding-bottom">
-    <section class="mid-grey pattern-brushed box-shadow-grey">
+    <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
         <div class="container padding-top">
                 {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                     {{ privacy.render_lock_page() }}
@@ -22,14 +22,14 @@
     
     {% if apps_created %}    
                         
-    <section id="created-apps" class="white pattern-white-wall-2x">
+    <section id="created-apps" class="white">
         {{render_grid_apps(apps_created, "Created Projects", upload_method)}}
     </section>
                     {% endif %}
                         
                     {% if apps %}    
                         
-    <section id="contributed-apps" class="white pattern-white-wall-2x">
+    <section id="contributed-apps" class="white">
         {{render_grid_apps(apps, "Contributions", upload_method)}}
     </section>
                     {% endif %}
