--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,22 +1,22 @@
 {% extends "/base.html" %}
 {% set active_page = "admin" %}
 {% set active_link = "admin" %}
-{% import "account/_helpers.html" as helper %}
+{% import "admin/_helpers.html" as admin_helper %}
 
 {% block content %}
     <div class="container-padded">
     <div class="container container-padded">
     <div class="row">
         <div class="col-sm-3">
-            {{ helper.render_account_local_nav(current_user, active_link) }}
-        </div>
-        <div class="col-sm-9" style="min-height:400px;">
-            <h1><strong>Admin</strong></h1>
+                    {{ admin_helper.render_account_local_nav(current_user, active_link) }}
+                </div>
+        <div class="col-sm-9">
+            <h1><strong>Admin Options</strong></h1>
             <div class="row">
                 <div id="featured-apps" class="col-sm-6">
                                 <div class="well">
                     <h2><i class="glyphicon glyphicon-star"></i> {{_('Featured Projects')}}</h2>
-                    <p>{{_('Show projects on the front page')}}</p>
+                    <p>{{_('Manage the projects to be shown on the home page')}}</p>
                     <a href="{{url_for('admin.featured')}}" class="btn btn-danger">
                         {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
                     </a>
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="row">
-                <div id="users" class="col-"col-sm-6">
+                <div id="users" class="col-sm-6">
                                 <div class="well">
                     <h2><i class="glyphicon glyphicon-user"></i> {{_('Administrators')}}</h2>
                     <p>{{_('Manage administrators')}}</p>
@@ -45,7 +45,7 @@
                 <div id="users-list" class="col-sm-6">
                                 <div class="well">
                     <h2><i class="glyphicon glyphicon-list"></i> {{_('Users')}}</h2>
-                    <p>{{_('Export a list of users')}}</p>
+                    <p>{{_('Export a list of all current users')}}</p>
                     <a href="{{url_for('admin.export_users', format='json')}}" class="btn btn-danger">
                         {{ _('JSON') }}
                     </a>
