--- a/templates/admin/users.html
+++ b/templates/admin/users.html
@@ -1,24 +1,26 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% set active_link = "admin" %}
-{% from "account/_helpers.html" import render_account_local_nav %}
 {% from "admin/_helpers.html" import render_admin_user %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-3">
-                {{ render_account_local_nav(current_user, active_link) }}
+                {{ render_admin_local_nav(current_user, active_link) }}
             </div>
             <div class="col-sm-9">
-                <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Admin Users') }}</h1>
+                <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Administrators') }}</h1>
                 {% from "_formhelpers.html" import render_field %}
                 <form class="form-search" method="POST">
                 {{ form.hidden_tag() }}
                 <div class="input-group">
-                <input id="user" name="user" type="text" class="input-lg search-query" placeholder={{ _('Try with the full name or nick') }}>
-                <button type="submit" class="btn"><i class="glyphicon glyphicon-search"></i> {{ _('Search') }}</button>
+                <input id="user" name="user" type="text" class="search-query form-control" placeholder="Enter full name or username">
+                <span class="input-group-btn">
+                    <button type="submit" class="btn btn-default form-control search-button"><i class="glyphicon glyphicon-search"></i> {{ _('Search') }}</button>
+                </span>
                 </div>
                 </form>
                 {% if found %}
@@ -28,12 +30,12 @@
                 {% endfor %}
                 {% endif %}
         
-                {% if users %}
+                
                 <h1>{{ _('Current Users with Admin privileges') }}</h1>
                 {% for user in users %}
                 {{ render_admin_user(user) }}
                 {% endfor %}
-                {% endif %}
+                
             </div>
         </div>
     </div>
