--- a/templates/account/index.html
+++ b/templates/account/index.html
@@ -3,12 +3,13 @@
 {% import "privacy/locked.html" as privacy %}
 {% import "account/_helpers.html" as helper %}
 {% from "applications/_helpers.html" import broken_image %}
+{% import "admin/_helpers.html" as admin_helper %}
 
 {% block content %}
 <div class="container-padded">
   <div class="container container-padded">
     <div class="row">
-      <div class="col-sm-9 col-sm-offset-2">
+      <div class="col-sm-10 col-sm-offset-2">
           {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
             {{ privacy.render_lock_page() }}
           {% else %}
