--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% set active_link = "admin" %}
-{% from "account/_helpers.html" import render_account_local_nav %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-3">
-                {{ render_account_local_nav(current_user, active_link) }}
+                {{ render_admin_local_nav(current_user, active_link) }}
             </div>
             <div class="col-sm-9">
                 <h1><strong>{{ _('Admin') }}:</strong> {{title}}</h1>
@@ -16,9 +16,10 @@
                     <strong>{{ _('Danger Zone!') }}</strong> {{ _('Deleting the category will remove it from all the projects! This operation cannot be undone!') }}
                 </div>
                 <h2>{{_('Delete Category')}}: {{category.name}}?</h2>
-                <form method="post" action="{{url_for('admin.del_category', id=category.id)}}">
-                    <input class="btn btn-sm" type="submit"  value="Yes"</input>
-                    <a class="btn btn-lg" href="{{url_for('admin.categories')}}">No, do not delete it</a>
+                <form method="post" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
+                    {{form.hidden_tag()}}
+                    <input class="btn btn-danger" type="submit"  value="Yes"</input>
+                    <a class="btn btn-success" href="{{url_for('admin.categories')}}">No, do not delete it</a>
                 </form>
             </div>
         </div>
