--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -1,27 +1,27 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
 {% set active_link = "admin" %}
-{% from "account/_helpers.html" import render_account_local_nav %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
 <div class="container-padded">
     <div class="container container-padded">
         <div class="row">
             <div class="col-sm-3">
-                {{ render_account_local_nav(current_user, active_link) }}
+                {{ render_account_admin_nav(current_user, active_link) }}
             </div>
             <div class="col-sm-9">
                 <h1><strong>{{ _('Admin') }}:</strong> {{title}}</h1>
                 {% from "_formhelpers.html" import render_field %}
-                <form class="form-horizontal" method="POST" action="{{url_for('admin.update_category', id=category.id)}}">
+                <form role="form" method="POST" action="{{url_for('admin.update_category', id=category.id)}}">
                     {{form.hidden_tag()}}
                     <fieldset>
                     {{form.id}}
-                    {{ render_field(form.name, placeholder= _('Category name')) }}
-                    {{ render_field(form.description, placeholder= _('Category description')) }}
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-danger">{{_('Update Category')}}</button>
-                        <a href="{{url_for('admin.categories')}}" class="btn" >{{_('Cancel')}}</a>
+                    {{ render_field(form.name, placeholder= _('Category name'), class="form-control") }}
+                    {{ render_field(form.description, placeholder= _('Category description'), class="form-control") }}
+                    <div class="pull-right" role="group">
+                        <a href="{{url_for('admin.categories')}}" class="btn btn-default" >{{_('Cancel')}}</a>
+                         <button type="submit" class="btn btn-danger">{{_('Update Category')}}</button>
                     </div>
                     </fieldset>
                 </form>
