--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
-{% set active_link = "admin" %}
+{% set active_link = "categories" %}
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
