--- a/templates/admin/applications.html
+++ b/templates/admin/applications.html
@@ -1,7 +1,7 @@
 {% extends "/base.html" %}
 {% set active_page = "profile" %}
-{% set active_link = "admin" %}
-{% from "account/_helpers.html" import render_account_local_nav %}
+{% set active_link = "featured" %}
+{% from "admin/_helpers.html" import render_admin_local_nav %}
 {% from "applications/_helpers.html" import render_app_admin_featured, broken_image %}
 
 {% block content %}
@@ -9,10 +9,10 @@
         <div class="container container-padded">
             <div class="row">
                 <div class="col-sm-3">
-                    {{ render_account_local_nav(current_user, active_link) }}
+                    {{ render_admin_local_nav(current_user, active_link) }}
                 </div>
                 <div class="col-sm-9">
-                    <h1><strong>{{ _('Admin') }} :</strong> {{ _('Manage featured projects') }}</h1>
+                    <h1><strong>{{ _('Admin') }} :</strong> {{ _('Featured projects') }}</h1>
                 {% include "admin/js/featured_apps.js" %}
                     <ul class="nav nav-pills">
                         {% for c in categories %}
