--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -23,6 +23,8 @@
 
 {% macro render_admin_local_nav(current_user, active_link) -%}
 <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix-top">
+    <li {% if active_link=="admin"%}class="active"{% endif %}><a href="{{url_for('admin.index')}}"><i class="glyphicon glyphicon-chevron-right"></i>Dashboard</a></li>
+    <li {% if active_link=="applications"%}class="active"{% endif %}><a href="{{ url_for('account.applications', name=current_user.name) }}"><i class="glyphicon glyphicon-chevron-right"></i>Projects</a></li>
     <li {% if active_link=="featured"%}class="active"{% endif %}><a href="{{url_for('admin.featured')}}"><i class="glyphicon glyphicon-chevron-right"></i>Featured</a></li>
     <li {% if active_link=="categories"%}class="active"{% endif %}><a href="{{url_for('admin.categories')}}"><i class="glyphicon glyphicon-chevron-right"></i>Categories</a></li>
     <li {% if active_link=="administrators"%}class="active"{% endif %}><a href="{{url_for('admin.users')}}"><i class="glyphicon glyphicon-chevron-right"></i>Administrators</a></li>
