--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2052,6 +2052,7 @@ background-color: rgba(255,255,255,1);
 
 
 .well {
+  min-height: 230px;
   border-radius: 6px;
   background-image: url(../img/patterns/brushed.png);
   text-shadow: #efefef 0.5px 0.5px 0px;
@@ -2063,6 +2064,12 @@ background-color: rgba(255,255,255,1);
   z-index: 1;
   border: 1px solid rgba(255,255,255,0.5);
   padding: 10px 40px 30px 40px;
+}
+
+.well .btn-dash {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
 }
 
 /*
