--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% set active_page = "profile" %}
-{% set active_link = "admin" %}
+{% set active_link = "categories" %}
 {% from "admin/_helpers.html" import render_admin_local_nav %}
 
 {% block content %}
@@ -13,7 +13,7 @@
             <div class="col-sm-9">
                 <h1><strong>{{ _('Admin') }}:</strong> {{title}}</h1>
                 <div class="alert alert-danger">
-                    <strong>{{ _('Danger Zone!') }}</strong> {{ _('Deleting the category will remove it from all the projects! This operation cannot be undone!') }}
+                    <strong>{{ _('Warning!') }}</strong> {{ _('Deleting the category will remove all associated projects. This operation cannot be undone.') }}
                 </div>
                 <h2>{{_('Delete Category')}}: {{category.name}}?</h2>
                 <form method="post" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
