--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="container-padded remove-padding-bottom">
-    <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
+    <section class="mid-grey pattern-brushed box-shadow-grey-bottom padding-bottom">
         <div class="container padding-top">
                 {% if enforce_privacy and (current_user.is_anonymous() or (current_user.is_authenticated and not current_user.admin)) %}
                     {{ privacy.render_lock_page() }}
