--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -11,7 +11,8 @@
                 {{ render_admin_local_nav(current_user, active_link) }}
             </div>
             <div class="col-sm-9">
-                <h1><strong>{{ _('Admin') }}:</strong> {{title}}</h1>
+                <h1><strong>{{ _('Admin') }}:</strong> Delete Category</h1>
+                <hr>
                 <div class="alert alert-danger">
                     <strong>{{ _('Warning!') }}</strong> {{ _('Deleting the category will remove all associated projects. This operation cannot be undone.') }}
                 </div>
