--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         <div id="projects" class="col-sm-6">
                             <div class="well">
-                                <h2><i class="glyphicon glyphicon-star"></i> {{_('Projects')}}</h2>
+                                <h2><i class="fa fa-folder-open"></i> {{_('Projects')}}</h2>
                                 <p>{{_('Manage or create projects')}}</p>
                                 <a href="{{ url_for('account.applications', name=current_user.name) }}" class="btn btn-danger btn-dash">
                                     {{ _('Manage') }} <i class="glyphicon glyphicon-chevron-right"></i>
