--- a/templates/admin/categories.html
+++ b/templates/admin/categories.html
@@ -12,8 +12,10 @@
             </div>
             <div id="categories" class="col-sm-9">
                 <h1><strong>{{ _('Admin') }}:</strong> {{ _('Manage Categories') }}</h1>
+                <hr>
                 <div class="row">
                     <div id="add" class="col-sm-12">
+                        <h2>Add Category</h2>
                         {% from "_formhelpers.html" import render_field %}
                         <form role="form" method="POST" action="{{url_for('admin.categories')}}">
                             {{form.hidden_tag()}}
@@ -21,7 +23,7 @@
                             {{ render_field(form.name, placeholder= _('Category name'), class="form-control") }}
                             {{ render_field(form.description, placeholder= _('Category description'), class="form-control") }}
                             <div class="pull-right" role="group">
-                                <button type="submit" class="btn btn-danger">{{_('Add Category')}}</button>
+                                <button type="submit" class="btn btn-danger">{{_('Add')}}</button>
                             </div>
                             </fieldset>
                         </form>
@@ -37,7 +39,7 @@
                     </div>
                     <div class="col-sm-6">
                         <div class="btn-group">
-                            <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> {{_('Edit Category Name')}}</a>
+                            <a href="{{url_for('admin.update_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-edit"></i> {{_('Edit Category')}}</a>
                             {% if n_apps_per_category[c.short_name] == 0 and (categories | count > 1) %}
                             <a href="{{url_for('admin.del_category', id=c.id)}}" class="btn"><i class="glyphicon glyphicon-trash"></i> {{_('Delete Category')}}</a>
                             {% else %}
