--- a/templates/admin/update_category.html
+++ b/templates/admin/update_category.html
@@ -11,7 +11,8 @@
                 {{ render_admin_local_nav(current_user, active_link) }}
             </div>
             <div class="col-sm-9">
-                <h1><strong>{{ _('Admin') }}:</strong> {{title}}</h1>
+                <h1><strong>{{ _('Admin') }}:</strong> Edit Category</h1>
+                <hr>
                 {% from "_formhelpers.html" import render_field %}
                 <form role="form" method="POST" action="{{url_for('admin.update_category', id=category.id)}}">
                     {{form.hidden_tag()}}
