--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,24 +3,33 @@
 {% import "account/_helpers.html" as account_helper %}
 {% block content %}
 
-<div class="splash vcenter">
-   <div class="container container-max-height">
-    <div class="col-sm-12 pull-down-center">
-            <a href="#intro" class="btn btn-circle anchor-btn"><i class="fa fa-chevron-down"></i></a>
+<div class="splash">
+  <div class="splash-overlay vcenter">
+    <div class="container text-center padding-top">
+      <h1>Crowd-sourcing from the British Library</h1>
+        <div class="col-sm-12">
+            <div class="btn btn-circle anchor-btn">
+             <a href="#intro">
+                  <div><i class="fa fa-angle-double-down fa-3x padding-top-xs"></i></div>
+                  <div><br>Get<br>Started</div>
+             </a>
+            </div>
+        </div>
     </div>
-   </div>
+  </div>
 </div>
 
 <a id="intro"></a>
 <section class="mid-grey pattern-brushed box-shadow-grey-bottom">
       <div class="container container-padded text-center">
          <div class="col-sm-offset-2 col-sm-8">
-          <h1 class="inset-text-grey">Crowd-sourcing from the British Library</h1>
+          <h2 class="inset-text-grey">What's this all about?</h2>
             <p class="lead">
-               {{ brand }} is a crowd-sourcing platform focused on making important research materials 
-               more easily accessible and readily available. By participating you will have a direct impact 
+               {{ brand }} is a crowd-sourcing platform focused on making important research materials
+               more readily available to a wider audience. By participating you will have a direct impact 
                on future research conducted using the diverse collections held at the British Library.
             </p>
+            <a href="" class="btn btn-default">Find Out More</a>
          </div>
       </div>
 </section>
@@ -39,7 +48,7 @@
 {% endif %}
 
 {% if top_users %}
-<section id="top_users" class="container-padded">
+<section id="top_users">
    <div class="container container-padded">
     <div class="col-sm-12">
       <div class="row text-center padding-bottom-sm">
